--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,4 +1,4 @@
  <% include ./partials/header %>
  <% include ./partials/navBar %>
- 	<h1> Child Monitoring System </h1><br>
+ 	<h1> welcome user </h1>
  <% include ./partials/header %>
