--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,18 +7,16 @@
       <form class="form-horizontal" action="/login" method="post" >  
           <!-- firstname input-->
           <div class="form-group">
-                <label class="col-md-4 control-label" for="password">Username</label>        
+                <label class="col-md-4 control-label" >Username</label>        
                 <div class="col-md-4">
-                    <input id="phone" name="phone" type="number" placeholder="username" class="form-control input-md" required="">
-                    <span class="help-block">Please enter your username</span>
+                    <input name="username" type="text" placeholder="username" class="form-control input-md" required>
                 </div>
           </div>
           <!-- firstname input-->
           <div class="form-group">
                 <label class="col-md-4 control-label" for="password">Password</label>        
                 <div class="col-md-4">
-                    <input id="phone" name="phone" type="number" placeholder="password" class="form-control input-md" required="">
-                    <span class="help-block">Please enter your password</span>
+                    <input  name="password" type="password" placeholder="password" class="form-control input-md" required>
                 </div>
           </div>
           <div class="form-group">
