logout functionality added

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,4 +1,4 @@
  <% include ./partials/header %>
  <% include ./partials/navBar %>
- 	<h1> welcome user </h1>
+ 	<h1> welcome <%= user["firstName"] %> </h1>
  <% include ./partials/header %>
