--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -7,6 +7,8 @@
 		      <% if(!user){ %>
 		        <li><a href="/register"><span class="glyphicon glyphicon-log-in"></span> signup</a></li>
 		      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+		      <% } else{%>
+		      	<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> logout</a></li>
 		      <% } %>
 		   </ul>
 		</div>
