--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,7 +10,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">Firstname</label>        
                     <div class="col-md-4">
-                        <input  name="user[fname]" type="text" placeholder="Firstname" class="form-control input-md" required>
+                        <input  name="user[fname]" type="text" placeholder="Firstname" class="form-control input-md" minlength="5" maxlength="32" required>
                     </div>
                 </div>
             
@@ -18,7 +18,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">Lastname</label>        
                     <div class="col-md-4">
-                        <input name="user[lname]" type="text" placeholder="Lastname" class="form-control input-md" required>
+                        <input name="user[lname]" type="text" placeholder="Lastname" class="form-control input-md" minlength="4" maxlength="15" required>
                     </div>
                 </div>
                     
@@ -26,7 +26,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">User name</label>        
                     <div class="col-md-4">
-                        <input name="user[username]" type="text" placeholder="username" class="form-control input-md" required>
+                        <input name="user[username]" type="text" placeholder="username" class="form-control input-md"  minlength="8" maxlength="15" required>
                     </div>
                 </div> 
 
@@ -34,7 +34,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">password</label>        
                     <div class="col-md-4">
-                        <input name="user[password]" type="password" placeholder="password" class="form-control input-md" required> 
+                        <input name="user[password]" type="password" placeholder="password" class="form-control input-md"  minlength="8" maxlength="20" required> 
                     </div>
                 </div> 
 
@@ -42,7 +42,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">re-enter password</label>        
                     <div class="col-md-4">
-                        <input name="user[repassword]" type="password" placeholder="re-enter password" class="form-control input-md" required>
+                        <input name="user[repassword]" type="password" placeholder="re-enter password" class="form-control input-md" minlength="8" maxlength="20" required>
                     </div>
                 </div>        
                     
@@ -50,9 +50,9 @@
                 <div class="form-group">
                   <label class="col-md-4 control-label">Gender</label>        
                   <div class="col-md-4">
-                        <select value="user[gender]" name="gender" class= "form-control">
-                            <option value="user[gender]" >male</option>
-                            <option value="user[gender]">female</option>
+                        <select  name="user[gender]" class= "form-control">
+                            <option value="male" >male</option>
+                            <option value="female">female</option>
                         </select>
                   </div>
                 </div>
@@ -67,14 +67,14 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label">Address</label>        
                     <div class="col-md-4">
-                        <input name="user[address]" type="text" placeholder="Address" class="form-control input-md" required>
+                        <input name="user[address]" type="text" placeholder="Address" class="form-control input-md">
                     </div>
                 </div>
                 <!-- Phone input-->
                 <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">Phone</label>        
+                    <label class="col-md-4 control-label">Phone</label>        
                     <div class="col-md-4">
-                        <input name="user[phone]" type="number" placeholder="Phone number" class="form-control input-md" required>
+                        <input name="user[phone]" type="number" placeholder="Phone number" class="form-control input-md" minlength="10" maxlength="10" required>
                     </div>
                 </div>
                 <!-- Button (Double) -->
