--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,8 +23,9 @@
               <label class="col-md-4 control-label" for="button1id"></label>        
                 <div class="col-md-8">
                     <button type="submit" class="btn btn-info">Login</button>
-                </div>
+                    <button type="link" class="btn btn-info"><a href="/forgotPassword">Forgot Password</a></button>
+                </div>       
           </div>
-      </form>     
+               </form>     
   </div>
 <% include ./partials/footer %>
