--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -18,7 +18,10 @@
 			<div class="alert alert-danger" role="alert"> <%= error %> </div>
 		<% }else if(success && success.length>0){ %>
 			<div class="alert alert-success" role="alert"> <%= success %> </div>
-		<% } %>
+		<% }else if(warning && warning.length>0){ %>
+			<div class="alert alert-success" role="alert"> <%= warning %> </div>
+		<% } %> 
+
 	</div>
 
 	<header>
