Updated the user interface for home, login & sign up. Started user view and working on it.

--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -1,46 +1,64 @@
 <% include ./partials/header %>
-<% include ./partials/navBar %>
 
-<div class = "container-fluid">
-	<div class = "row">
-		<div class = "col-sm-4">
+	<div class="container-fluid">
+		<ul class="nav navbar-nav navbar-right">
+			<li>
+				<a href="/">
+					<span class="glyphicon glyphicon-user"></span> Home </a>
+			</li>
+			<li>
+				<a href="/register">
+					<span class="glyphicon glyphicon-log-in"></span> Signup </a>
+			</li>
+		</ul>
+	</div>
 
-		</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-4">
 
-		<div class = "col-sm-4">
-			<h4 style = "text-align: center;">Forgot Password</h4>
+			</div>
 
-			<% if(error && error.length>0){ %>
-				<div class="alert alert-danger" role="alert"> <%= error %></div>
-			<% } else if(success && success.length>0){ %>
-				<div class="alert alert-success" role="alert"> <%= success %></div>
-			<% } else if(warning && warning.length>0){ %>
-				<div class="alert alert-warning" role="alert"> <%= warning %></div>
-			<% } %>
-			
-			<form action = "/forgotPassword" method = "post">
-				<div class = "jumbotron">
-					<div class="form-group">
-						<label for="email">Email:</label>
-						<input type="email" class="form-control" id="emailID" placeholder="Enter assosiated email" name = "emailID">
+			<div class="col-sm-4">
+				<h4 style="text-align: center;">Forgot Password</h4>
+
+				<% if(error && error.length>0){ %>
+					<div class="alert alert-danger" role="alert">
+						<%= error %>
 					</div>
-					<div class = "row">
-						<div class = "col-sm-3"></div>
-						<div class = "col-sm-6">
-							<input type="submit" class="btn btn-primary" value = "Send Link" name = "submit">
+					<% } else if(success && success.length>0){ %>
+						<div class="alert alert-success" role="alert">
+							<%= success %>
 						</div>
-						<div class = "col-sm-3">
-						</div>
-						<div class = "col-sm-2"></div>
-					</div>
-				</div>
-			</form>
+						<% } else if(warning && warning.length>0){ %>
+							<div class="alert alert-warning" role="alert">
+								<%= warning %>
+							</div>
+							<% } %>
+
+								<form action="/forgotPassword" method="post">
+									<div class="jumbotron">
+										<div class="form-group">
+											<label for="email">Email:</label>
+											<input type="email" class="form-control" id="emailID" placeholder="Enter assosiated email" name="emailID">
+										</div>
+										<div class="row">
+											<div class="col-sm-3"></div>
+											<div class="col-sm-6">
+												<input type="submit" class="btn btn-primary" value="Send Link" name="submit">
+											</div>
+											<div class="col-sm-3">
+											</div>
+											<div class="col-sm-2"></div>
+										</div>
+									</div>
+								</form>
+			</div>
+
+			<div class="col-sm-4">
+			</div>
+
 		</div>
+	</div>
 
-		<div class = "col-sm-4">
-		</div>
-
-	</div>  
-</div>
-
-<% include ./partials/footer %>
+	<% include ./partials/footer %>
