--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,55 @@
 <% include ./partials/header %>
-<% include ./partials/navBar %>
-<div class="container">
-  <div>
-    <p class="col-sm-8" style="text-align:center">
-      CMS is a web application that provides parents an option to look at their children location. 
-      Through this parents can add the details of their children and track thier travelling locations and also the travel history
-      Here you will be having signup and login options..
-      If you are already a logged in user then you can enter your credentails to login.
-    </p>     
-  </div>
-</div>
-<% include ./partials/footer %>
+<body>
+  
+      <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="/register">
+              <span class="glyphicon glyphicon-user"></span> Sign Up</a>
+          </li>
+          <li>
+            <a href="/login">
+              <span class="glyphicon glyphicon-log-in"></span> Login</a>
+          </li>
+        </ul>
+      </div>
+  
+  
+      <div class="container-fluid">
+        <div class="row">
+          <p>
+            CMS is a web application that provides parents an option to look at their children location. Through this parents can add
+            the details of their children and track thier travelling locations and also the travel history Here you will be
+            having signup and login options. If you are already a logged in user then you can enter your credentails to login
+            in.
+          </p>
+        </div>
+        <div>
+          <img src="/images/children.jpg">
+        </div>
+  
+      </div>
+  
+  
+  
+  
+  
+  
+    </body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <% include ./partials/footer %>
