--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,38 +1,13 @@
-div.container {
-    width: 100%;
-    /* border: 1px solid gray; */
-}
-
 header, footer {
     padding: 1em;
     color: white;
     background-color: black;
     clear: left;
     text-align: center;
-}
+  }
 
-
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
-}
-   
-nav ul a {
-    color:blue
-    text-decoration: none;
-}
-
-article {
-    margin-left: 170px;
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
+  p {
+    margin: 0 0 10px;
+    text-align: center;
+    color: red;
 }
