--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,31 +1,46 @@
 <% include ./partials/header %>
-<% include ./partials/navBar %>
-  <div class="container"> 
-      <div class="text-center">
-          <h1 class="nice">Login Form</h1>
-      </div>    
-      <form class="form-horizontal" action="/login" method="post" >  
-          <!-- firstname input-->
-          <div class="form-group">
-                <label class="col-md-4 control-label" >Username</label>        
+
+    <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="/">
+                    <span class="glyphicon glyphicon-user"></span> Home </a>
+            </li>
+            <li>
+                <a href="/register">
+                    <span class="glyphicon glyphicon-log-in"></span> Signup </a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <div class="text-center">
+            <h1 class="nice">Login Form</h1>
+        </div>
+        <form class="form-horizontal" action="/login" method="post">
+            <!-- firstname input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label">Username</label>
                 <div class="col-md-4">
                     <input name="username" type="text" placeholder="username" class="form-control input-md" required>
                 </div>
-          </div>
-          <!-- firstname input-->
-          <div class="form-group">
-                <label class="col-md-4 control-label" for="password">Password</label>        
+            </div>
+            <!-- firstname input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Password</label>
                 <div class="col-md-4">
-                    <input  name="password" type="password" placeholder="password" class="form-control input-md" required>
+                    <input name="password" type="password" placeholder="password" class="form-control input-md" required>
                 </div>
-          </div>
-          <div class="form-group">
-              <label class="col-md-4 control-label" for="button1id"></label>        
+            </div>
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="button1id"></label>
                 <div class="col-md-8">
                     <button type="submit" class="btn btn-info">Login</button>
-                    <button type="submit" class="btn btn-info" ><a href="/forgotPassword">Forgot Password</a></button>
-                </div>       
-          </div>
-               </form>     
-  </div>
-<% include ./partials/footer %>
+                    <button type="submit" class="btn btn-info">
+                        <a href="/forgotPassword">Forgot Password</a>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <% include ./partials/footer %>
