--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
                     <span class="glyphicon glyphicon-log-in"></span> Signup </a>
             </li>
         </ul>
-    </div>
+    </div>  
 
     <div class="container">
         <div class="text-center">
@@ -20,9 +20,9 @@
         <form class="form-horizontal" action="/login" method="post">
             <!-- firstname input-->
             <div class="form-group">
-                <label class="col-md-4 control-label">Username</label>
+                <label class="col-md-4 control-label">Email</label>
                 <div class="col-md-4">
-                    <input name="username" type="text" placeholder="username" class="form-control input-md" required>
+                    <input name="emailID" type="email" placeholder="Email" class="form-control input-md" required>
                 </div>
             </div>
             <!-- firstname input-->
