--- a/views/user.ejs
+++ b/views/user.ejs
@@ -10,7 +10,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-3">
+		<div class="col-sm-2" style="background-color:powderblue;">
 			<ul style="list-style-type:none">
 				<li class="active">
 					<a data-toggle="pill" href="#addchild">Add Child</a>
@@ -27,12 +27,11 @@
 			</ul>
 		</div>
 
-		<div class="col-sm-9">
+		<div class="col-sm-10">
 			<div class="tab-content">
 				<div id="addchild" class="tab-pane fade in active">
 					<h1 class="nice">ADD CHILD</h1>
-
-					<form class="form-horizontal" method="post" action="/user">
+					<form class="form-horizontal" method="post" action="/addChild">
 						<!-- firstname input-->
 						<div class="form-group">
 							<label class="col-md-4 control-label" for="password">First Name</label>
