--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,62 @@
 <% include ./partials/header %>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {margin:0;}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+</style>
+</head>
 <body>
-  
+
+  <div class="topnav">
+    <a href="/register">
+      <span class="glyphicon glyphicon-user"></span> Sign Up</a>
+      
+      <a href="/login">
+      <span class="glyphicon glyphicon-log-in"></span> Login</a>
+    </div>
+
+
+
       <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="/register">
               <span class="glyphicon glyphicon-user"></span> Sign Up</a>
           </li>
+          
           <li>
             <a href="/login">
               <span class="glyphicon glyphicon-log-in"></span> Login</a>
           </li>
         </ul>
       </div>
-  
+      
   
       <div class="container-fluid">
         <div class="row">
@@ -53,3 +96,4 @@
     <br>
     <br>
     <% include ./partials/footer %>
+    </html>
