--- a/views/user.ejs
+++ b/views/user.ejs
@@ -38,7 +38,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md">
-							<a href="/userpage">Child</a>
+							<a href="/userchild">Child</a>
 						</div>
 						<div class="col-md">
 							<a href="/profile">Profile</a>
