Modified index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,16 @@ body {margin:0;}
 
 #info{
   font-size: 20px;
-
+}
+ul{
+  text-indent: 2pt;
+  font-size: 20px;
+  color: black;
+}
+h4{
+  text-indent: 30pt;
+  font-size: 20px;
+  color: black;
 }
 </style>
 </head>
@@ -71,45 +80,45 @@ body {margin:0;}
       </div> -->
       
   
-      <div class="container-fluid">
+      
         <div class="row">
-            <div class="col-md-3">
-                <img src="/images/children.jpg">
-            </div>
-            <div class="col-md-9">
+            <div class="col-md-7">
+                <img src="/images/child (1).gif">
+              </div>
+              <div class="col-md-5">     
           <p id = "info" style="color:black;">
             CMS is a web application that provides parents an option to look at their children location. 
             Through this parents can add the details of their children and track thier travelling locations 
             and also the travel history Here you will be having signup and login options. If you are already
-            a logged in user then you can enter your credentails to loging in.
+            a logged in user then you can enter your credentails to loging in. Otherwise you can sign up fo the system.
           </p>
-        </div>
+          <h4>Steps to Follow</h4>
+          <ul>
+            <li>
+              Register
+            </li>
+            <li>
+              Login
+            </li>
+            <li>
+              Add Child Info
+            </li>
+            <li>
+              Track Child Location
+            </li>
+            <li>
+              Logout
+            </li>
+          </ul>
       </div>
-        
-  
       </div>
   
-  
-  
-  
-  
-  
-    </body>
     <br>
     <br>
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    
     <% include ./partials/footer %>
+</body>
     </html>
