--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,11 @@
 		<link rel="stylesheet" href="/css/main.css">
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script type="text/javascript" src="/js/main.js"></script>
+	<style>
+   h1{
+	   font-family: cursive;
+   }
+	</style>
 	</head>
 
 	<header>
