Modified the index and about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -57,7 +57,13 @@
     <p> Helps to monitor and track the locations of thier children</p>
     <p>Contact us at https://github.com/Akhila0729/CMS </p>
     <p> Phonenumber: +1(660)528-0729</p>
-   
+    <div class = "row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-9">
+            <img src="/images/child2.png">
+            </div>
+    </div>
     <br>
     <br>
     <br>
