--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@ h4{
             CMS is a web application that provides parents an option to look at their children location. 
             Through this parents can add the details of their children and track thier travelling locations 
             and also the travel history Here you will be having signup and login options. If you are already
-            a logged in user then you can enter your credentails to loging in. Otherwise you can sign up fo the system.
+            a logged in user then you can enter your credentails to loging in. 
           </p>
           <h4>Steps to Follow</h4>
           <ul>
