--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,8 +90,10 @@ h4{
             CMS is a web application that provides parents an option to look at their children location. 
             Through this parents can add the details of their children and track thier travelling locations 
             and also the travel history Here you will be having signup and login options. If you are already
-            a logged in user then you can enter your credentails to loging in. 
+            a logged in user then you can enter your credentails to loging in. Here you go
           </p>
+          <p></p>
+          <br>
           <h4>Steps to Follow</h4>
           <ul>
             <li>
