--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="/js/main.js"></script>
 	<style>
    h1{
-	   font-family: cursive;
+	   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    }
 	</style>
 	</head>
