--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,97 +1,100 @@
 <% include ./partials/header %>
-	<html>
+    <!DOCTYPE html>
+    <html>
 
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<style>
-			body {
-				margin: 0;
-			}
+    <head>
+        <title>Simple Map</title>
+        <meta name="viewport" content="initial-scale=1.0">
+        <meta charset="utf-8">
+        <style>
+            body {
+                margin: 0;
+            }
 
-			.topnav {
-				overflow: hidden;
-				background-color: #333;
-			}
+            .topnav {
+                overflow: hidden;
+                background-color: #333;
+            }
 
-			.topnav a {
-				float: left;
-				color: #f2f2f2;
-				text-align: center;
-				padding: 14px 16px;
-				text-decoration: none;
-				font-size: 17px;
-			}
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 17px;
+            }
 
-			.topnav a:hover {
-				background-color: #ddd;
-				color: black;
-			}
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
 
-			.topnav a.active {
-				background-color: #4CAF50;
-				color: white;
-			}
-		</style>
+            .topnav a.active {
+                background-color: #4CAF50;
+                color: white;
+            }
 
-		<body>
-			<div class="topnav">
-				<div class="container">
-					<div class="row">
-						<div class="col-md">
-							<a href="/userchild">Child</a>
-						</div>
-						<div class="col-md">
-							<a href="/profile">Profile</a>
-						</div>
-						<div class="col-md">
-							<a href="/alert">Alert</a>
-						</div>
-						<div class="col-md">
-							<a href="/settings">Settings</a>
-						</div>
-						<div class="col-md">
-							<a href="/record">Record</a>
-						</div>
-						<div class="col-md-6">
-							<a href="/about">About</a>
-						</div>
-						<div class="col-md">
-							<a href="/logout">
-								<span class="glyphicon glyphicon-user"></span> Logout</a>
-						</div>
-					</div>
-				</div>
-			</div>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	
-	
+            /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
 
+            #map {
+                height: 100%;
+            }
 
-		</body>
-	</head>
+            /* Optional: Makes the sample page fill the window. */
 
-	</html>
-	<% include ./partials/footer %>
+            html,
+            body {
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+        </style>
+
+    </head>
+
+    <body>
+        <div class="topnav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md">
+                        <a href="/userchild">Child</a>
+                    </div>
+                    <div class="col-md">
+                        <a href="/profile">Profile</a>
+                    </div>
+                    <div class="col-md">
+                        <a href="/alert">Alert</a>
+                    </div>
+                    <div class="col-md">
+                        <a href="/settings">Settings</a>
+                    </div>
+                    <div class="col-md">
+                        <a href="/record">Record</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="/about">About</a>
+                    </div>
+                    <div class="col-md">
+                        <a href="/logout">
+                            <span class="glyphicon glyphicon-user"></span> Logout</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h2>Current Location</h2>
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-6" id="map"></div>
+        <div class="col-md-3"></div>
+
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3RaBAQdDLeYcpum-bTxVMvCuGvenG_SQ&callback=initMap" async
+            defer></script>
+            
+        <% include ./partials/footer %>
+    </body>
+
+    </html>
+    
