--- a/views/user_child.ejs
+++ b/views/user_child.ejs
@@ -72,8 +72,7 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="password">First Name</label>
                         <div class="col-md-4">
-                            <input id="phone" name="firstname" type="text" placeholder="Firstname" class="form-control input-md" required="">
-                            <span class="help-block">Please enter your Firstname</span>
+                            <input id="childFirstName" name="childFirstName" type="text" placeholder="Please enter Firstname" class="form-control input-md" required="">                            
                         </div>
                     </div>
 
@@ -81,53 +80,41 @@
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="password">Last Name</label>
                         <div class="col-md-4">
-                            <input id="phone" name="lastname" type="text" placeholder="Lastname" class="form-control input-md" required="">
-                            <span class="help-block">Please enter your Lastname</span>
+                            <input id="childLastName" name="childLastName" type="text" placeholder="Please enter Lastname" class="form-control input-md" required="">                            
                         </div>
                     </div>
 
                     <!-- Gender Input -->
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="checkboxes">Gender</label>
-
+                <div class="form-group">
+                        <label class="col-md-4 control-label">Gender</label>
                         <div class="col-md-4">
-                            <div class="checkbox">
-                                <label>
-                                    <input name="genderboxes" id="genderboxes-0" value="1" type="radio"> Male
-                                </label>
-                            </div>
-                            <div class="checkbox">
-                                <label>
-                                    <input name="genderboxes" id="genderboxes-1" value="2" type="radio"> Female
-                                </label>
-                            </div>
-                            <span class="help-block">Please select your Gender</span>
-
+                            <select name="childGender" class="form-control">
+                                <option value="male">male</option>
+                                <option value="female">female</option>
+                            </select>
                         </div>
                     </div>
+
                     <!-- Email input-->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="password">Email</label>
-
                         <div class="col-md-4">
-                            <input id="email" name="email" type="email" placeholder="Email" class="form-control input-md" required="">
-                            <span class="help-block">Please type in your email</span>
+                            <input id="childEmail" name="childEmail" type="email" placeholder="Please enter email" class="form-control input-md" required="">                            
                         </div>
                     </div>
+
                     <!-- address input-->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="password">Address</label>
                         <div class="col-md-4">
-                            <input id="phone" name="address" type="text" placeholder="Address" class="form-control input-md" required="">
-                            <span class="help-block">Please enter your Address</span>
+                            <input id="childAddress" name="childAddress" type="text" placeholder="Please enter Address" class="form-control input-md" required="">                            
                         </div>
                     </div>
                     <!-- Phone input-->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="password">Phone</label>
                         <div class="col-md-4">
-                            <input id="phone" name="mobilenumber" type="number" placeholder="Phone number" class="form-control input-md" required="">
-                            <span class="help-block">Please provide your Mobile Number</span>
+                            <input id="childPhone" name="childPhone" type="number" placeholder="Please provide Mobile Number" class="form-control input-md" required="">                            
                         </div>
                     </div>
                     <!-- Button (Double) -->
@@ -144,17 +131,16 @@
                 <p style="color: black;">Please enter the below details to remove a child</p>
                 <form class="form-horizontal" method="post" action="/removechild">
                     <div class="form-group">
-                        <label class="col-md-4 control-label">Child ID</label>
+                        <label class="col-md-4 control-label">Child First Name</label>
                         <div class="col-md-4">
-                            <input name="childid" type="number" placeholder="Enter Child ID" class="form-control input-md" required="">
+                            <input name="childFirstName" type="text" placeholder="Enter Child First Name" class="form-control input-md" required="">
 
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-md-4 control-label">Child Name</label>
+                        <label class="col-md-4 control-label">Child Last Name</label>
                         <div class="col-md-4">
-                            <input name="childname" type="text" placeholder="Enter Childname" class="form-control input-md" required="">
-
+                            <input name="childLastName" type="text" placeholder="Enter Child Last Name" class="form-control input-md" required="">
                         </div>
                     </div>
                     <div class="form-group">
