--- a/index.ejs
+++ b/index.ejs
@@ -1,123 +1,112 @@
 <% include ./partials/header %>
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {margin:0;}
+  <!DOCTYPE html>
+  <html>
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  
-}
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      body {
+        margin: 0;
+      }
 
-.topnav a {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+      .topnav {
+        overflow: hidden;
+        background-color: #333;
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
+      }
 
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
+      .topnav a {
+        float: right;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
 
-#info{
-  font-size: 20px;
-}
-ul{
-  text-indent: 2pt;
-  font-size: 20px;
-  color: black;
-}
-h4{
-  text-indent: 30pt;
-  font-size: 20px;
-  color: black;
-}
-</style>
-</head>
-<body>
+      .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
 
-  <div class="topnav">
-    <div class = "row">
+      .topnav a.active {
+        background-color: #4CAF50;
+        color: white;
+      }
+
+      #info {
+        font-size: 20px;
+      }
+
+      ul {
+        text-indent: 2pt;
+        font-size: 20px;
+        color: black;
+      }
+
+      h4 {
+        text-indent: 30pt;
+        font-size: 20px;
+        color: black;
+      }
+    </style>
+  </head>
+
+  <body>
+
+    <div class="topnav">
+      <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-5"></div>
         <div class="col-md-2">
-         <a href="/register">
-         <span class="glyphicon glyphicon-user" ></span> Sign Up</a>
+          <a href="/register">
+            <span class="glyphicon glyphicon-user"></span> Sign Up</a>
         </div>
         <div class="col-md-2">
           <a href="/login">
-          <span class="glyphicon glyphicon-log-in"></span> Login</a>
+            <span class="glyphicon glyphicon-log-in"></span> Login</a>
         </div>
       </div>
     </div>
 
-
-
-      <!-- <div class="container-fluid">
-        <ul class="nav navbar-nav navbar-right">
+    <div class="row">
+      <div class="col-md-8">
+        <img src="/images/child (1).gif">
+      </div>
+      <div class="col-md-4">
+        <p id="info" style="color:black;">
+          CMS is a web application that provides parents an option to look at their children location. Through this parents can add
+          the details of their children and track thier travelling locations and also the travel history Here you will be
+          having signup and login options. If you are already a logged in user then you can enter your credentails to loging
+          in. Here you go
+        </p>
+        <p></p>
+        <br>
+        <h4>Steps to Follow</h4>
+        <ul>
           <li>
-            <a href="/register">
-              <span class="glyphicon glyphicon-user"></span> Sign Up</a>
+            Register
           </li>
-          
           <li>
-            <a href="/login">
-              <span class="glyphicon glyphicon-log-in"></span> Login</a>
+            Login
+          </li>
+          <li>
+            Add Child Info
+          </li>
+          <li>
+            Track Child Location
+          </li>
+          <li>
+            Logout
           </li>
         </ul>
-      </div> -->
-      
-  
-      
-        <div class="row">
-            <div class="col-md-7">
-                <img src="/images/child (1).gif">
-              </div>
-              <div class="col-md-5">     
-          <p id = "info" style="color:black;">
-            CMS is a web application that provides parents an option to look at their children location. 
-            Through this parents can add the details of their children and track thier travelling locations 
-            and also the travel history Here you will be having signup and login options. If you are already
-            a logged in user then you can enter your credentails to loging in. Here you go
-          </p>
-          <p></p>
-          <br>
-          <h4>Steps to Follow</h4>
-          <ul>
-            <li>
-              Register
-            </li>
-            <li>
-              Login
-            </li>
-            <li>
-              Add Child Info
-            </li>
-            <li>
-              Track Child Location
-            </li>
-            <li>
-              Logout
-            </li>
-          </ul>
       </div>
-      </div>
-  
+    </div>
+
     <br>
     <br>
     <br>
     <% include ./partials/footer %>
-</body>
-    </html>
+  </body>
+
+  </html>
