edited the routes

--- a/views/alert.ejs
+++ b/views/alert.ejs
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <a href="/user">Go Back</a>
+                    <a href="/welcome">Go Back</a>
                 </div>
 
             </div>
