--- a/views/user_child.ejs
+++ b/views/user_child.ejs
@@ -56,7 +56,7 @@
                     <a data-toggle="pill" href="#locationrecords">Location Records</a>
                 </div>
                 <div class="col-md-2">
-                    <a href="/user">Go Back</a>
+                    <a href="/welcome">Go Back</a>
                 </div>
 
             </div>
