--- a/views/about.ejs
+++ b/views/about.ejs
@@ -45,7 +45,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <a href="/user">Go Back</a>
+                    <a href="/welcome">Go Back</a>
                 </div>
             </div>
         </div>
