--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -53,7 +53,7 @@
                             <a data-toggle="pill" href="#edituserinfo">Edit User Info</a>
                         </div>
                         <div class="col-md-3">
-                                <a href="/user">Go Back</a>
+                                <a href="/welcome">Go Back</a>
                         </div>
                         
         </div>
