--- a/public/css/add child.css
+++ b/public/css/add child.css
@@ -39,7 +39,7 @@ input[type="password"]:focus, input[type="text"]:focus {
   box-shadow: 0 0 4px 1px rgba(55, 166, 155, 0.3);
   outline: 0;
 }
-.show-password {
+.name {
   display: block;
   height: 16px;
   margin: 26px 0 0 28px;
@@ -56,8 +56,7 @@ input[type="checkbox"]:checked {
   left: 29px;
   width: 58px;
 }
-.toggle {
-  background: url(http://i.minus.com/ibitS19pe8PVX6.png) no-repeat;
+.id {  
   display: block;
   height: 16px;
   margin-top: -20px;
